// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`processMove fold -> fold -> call -> check 1`] = `
Object {
  "_id": "000000010000000000000000",
  "betMap": Object {
    "000000000000000000000002": 0.5,
    "000000000000000000000004": 0.5,
  },
  "currentBets": Array [
    0.5,
  ],
  "dealerPosition": 1,
  "isPlaying": true,
  "phases": Array [
    Object {
      "moves": Array [
        Object {
          "amount": 0,
          "moveType": "fold",
          "userId": "000000000000000000000006",
        },
        Object {
          "amount": 0,
          "moveType": "fold",
          "userId": "000000000000000000000001",
        },
        Object {
          "amount": 0.5,
          "moveType": "call",
          "userId": "000000000000000000000002",
        },
        Object {
          "amount": 0,
          "moveType": "check",
          "userId": "000000000000000000000004",
        },
      ],
      "type": "pre-flop",
    },
  ],
  "players": Array [
    Object {
      "money": 50,
      "seat": 1,
      "userId": "000000000000000000000001",
    },
    Object {
      "money": 50,
      "seat": 2,
      "userId": "000000000000000000000002",
    },
    Object {
      "money": 50,
      "seat": 4,
      "userId": "000000000000000000000004",
    },
    Object {
      "money": 50,
      "seat": 6,
      "userId": "000000000000000000000006",
    },
  ],
  "pot": 0,
  "stakes": 50,
  "tableId": null,
}
`;

exports[`processMove fold -> fold -> call 1`] = `
Object {
  "_id": "000000010000000000000000",
  "betMap": Object {
    "000000000000000000000002": 0.5,
    "000000000000000000000004": 0.5,
  },
  "currentBets": Array [
    0.5,
  ],
  "dealerPosition": 1,
  "isPlaying": true,
  "phases": Array [
    Object {
      "moves": Array [
        Object {
          "amount": 0,
          "moveType": "fold",
          "userId": "000000000000000000000006",
        },
        Object {
          "amount": 0,
          "moveType": "fold",
          "userId": "000000000000000000000001",
        },
        Object {
          "amount": 0.5,
          "moveType": "call",
          "userId": "000000000000000000000002",
        },
      ],
      "type": "pre-flop",
    },
  ],
  "players": Array [
    Object {
      "money": 50,
      "seat": 1,
      "userId": "000000000000000000000001",
    },
    Object {
      "money": 50,
      "seat": 2,
      "userId": "000000000000000000000002",
    },
    Object {
      "money": 50,
      "seat": 4,
      "userId": "000000000000000000000004",
    },
    Object {
      "money": 50,
      "seat": 6,
      "userId": "000000000000000000000006",
    },
  ],
  "pot": 0,
  "stakes": 50,
  "tableId": null,
}
`;

exports[`processMove fold -> fold 1`] = `
Object {
  "_id": "000000010000000000000000",
  "betMap": Object {
    "000000000000000000000002": 0.25,
    "000000000000000000000004": 0.5,
  },
  "currentBets": Array [
    0.5,
  ],
  "dealerPosition": 1,
  "isPlaying": true,
  "phases": Array [
    Object {
      "moves": Array [
        Object {
          "amount": 0,
          "moveType": "fold",
          "userId": "000000000000000000000006",
        },
        Object {
          "amount": 0,
          "moveType": "fold",
          "userId": "000000000000000000000001",
        },
      ],
      "type": "pre-flop",
    },
  ],
  "players": Array [
    Object {
      "money": 50,
      "seat": 1,
      "userId": "000000000000000000000001",
    },
    Object {
      "money": 50,
      "seat": 2,
      "userId": "000000000000000000000002",
    },
    Object {
      "money": 50,
      "seat": 4,
      "userId": "000000000000000000000004",
    },
    Object {
      "money": 50,
      "seat": 6,
      "userId": "000000000000000000000006",
    },
  ],
  "pot": 0,
  "stakes": 50,
  "tableId": null,
}
`;

exports[`processMove fold 1`] = `
Object {
  "_id": "000000010000000000000000",
  "betMap": Object {
    "000000000000000000000002": 0.25,
    "000000000000000000000004": 0.5,
  },
  "currentBets": Array [
    0.5,
  ],
  "dealerPosition": 1,
  "isPlaying": true,
  "phases": Array [
    Object {
      "moves": Array [
        Object {
          "amount": 0,
          "moveType": "fold",
          "userId": "000000000000000000000006",
        },
      ],
      "type": "pre-flop",
    },
  ],
  "players": Array [
    Object {
      "money": 50,
      "seat": 1,
      "userId": "000000000000000000000001",
    },
    Object {
      "money": 50,
      "seat": 2,
      "userId": "000000000000000000000002",
    },
    Object {
      "money": 50,
      "seat": 4,
      "userId": "000000000000000000000004",
    },
    Object {
      "money": 50,
      "seat": 6,
      "userId": "000000000000000000000006",
    },
  ],
  "pot": 0,
  "stakes": 50,
  "tableId": null,
}
`;

exports[`processMove raise -> fold -> call -> fold 1`] = `
Object {
  "_id": "000000010000000000000000",
  "betMap": Object {
    "000000000000000000000002": 2,
    "000000000000000000000004": 0.5,
    "000000000000000000000006": 2,
  },
  "currentBets": Array [
    0.5,
    2,
  ],
  "dealerPosition": 1,
  "isPlaying": true,
  "phases": Array [
    Object {
      "moves": Array [
        Object {
          "amount": 2,
          "moveType": "raise",
          "userId": "000000000000000000000006",
        },
        Object {
          "amount": 0,
          "moveType": "fold",
          "userId": "000000000000000000000001",
        },
        Object {
          "amount": 2,
          "moveType": "call",
          "userId": "000000000000000000000002",
        },
        Object {
          "amount": 0,
          "moveType": "fold",
          "userId": "000000000000000000000004",
        },
      ],
      "type": "pre-flop",
    },
  ],
  "players": Array [
    Object {
      "money": 50,
      "seat": 1,
      "userId": "000000000000000000000001",
    },
    Object {
      "money": 50,
      "seat": 2,
      "userId": "000000000000000000000002",
    },
    Object {
      "money": 50,
      "seat": 4,
      "userId": "000000000000000000000004",
    },
    Object {
      "money": 50,
      "seat": 6,
      "userId": "000000000000000000000006",
    },
  ],
  "pot": 0,
  "stakes": 50,
  "tableId": null,
}
`;

exports[`processMove raise -> reraise -> fold -> fold -> call 1`] = `
Object {
  "_id": "000000010000000000000000",
  "betMap": Object {
    "000000000000000000000001": 5,
    "000000000000000000000002": 0.25,
    "000000000000000000000004": 0.5,
    "000000000000000000000006": 5,
  },
  "currentBets": Array [
    0.5,
    2,
    5,
  ],
  "dealerPosition": 1,
  "isPlaying": true,
  "phases": Array [
    Object {
      "moves": Array [
        Object {
          "amount": 2,
          "moveType": "raise",
          "userId": "000000000000000000000006",
        },
        Object {
          "amount": 5,
          "moveType": "raise",
          "userId": "000000000000000000000001",
        },
        Object {
          "amount": 0,
          "moveType": "fold",
          "userId": "000000000000000000000002",
        },
        Object {
          "amount": 0,
          "moveType": "fold",
          "userId": "000000000000000000000004",
        },
        Object {
          "amount": 5,
          "moveType": "call",
          "userId": "000000000000000000000006",
        },
      ],
      "type": "pre-flop",
    },
  ],
  "players": Array [
    Object {
      "money": 50,
      "seat": 1,
      "userId": "000000000000000000000001",
    },
    Object {
      "money": 50,
      "seat": 2,
      "userId": "000000000000000000000002",
    },
    Object {
      "money": 50,
      "seat": 4,
      "userId": "000000000000000000000004",
    },
    Object {
      "money": 50,
      "seat": 6,
      "userId": "000000000000000000000006",
    },
  ],
  "pot": 0,
  "stakes": 50,
  "tableId": null,
}
`;
